--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    		<div class="col-twelve">
 
    			<h1>About Me</h1>
-			<p> I am Graduate Student pursuing Masters in Computer Science at the University of North Carolina at Charotte. Currently I am the General Secretary at The College of Computing and Informatics at the University of North Carolina at Charotte.</p>	
+			<p> I am  a graduate student pursuing Computer Science at the University of North Carolina at Charotte. Currently I am the General Secretary at The College of Computing and Informatics at the University of North Carolina at Charotte.</p>	
 		</div> <!-- /section-intro -->
 
    	<div class="row about-content">
@@ -203,7 +203,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>UNC Charlotte</h4>
-	   					<p>I am currently the General Sceretary at The College of Computing and Informatics at UNC Charlotte. I am responsible for maintaing proper communication between the graduate students and the committee for the betterment of the graduate students.</p>
+	   					<p>I am currently the General Secretary at The College of Computing and Informatics at UNC Charlotte. I am responsible for maintaing proper communication between the graduate students and the committee for the betterment of the graduate students.</p>
 						</div>
 
 	   			</div> <!-- /timeline-block -->
