--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
 					   <div class="description-box">
 					      <h4>STOCK MARKET PREDICTION USING SENTIMENT ANALYSIS</h4>		      
-					      <p>In this projet we created a machine learning model which is a combination of Genetic Algorithm and LSTM model which was an Evolutionary Neural Network in order to predict the Stock Market prices with a better accuracy</p>
+					      <p>In this project we created a machine learning model which is a combination of Genetic Algorithm and LSTM model which was an Evolutionary Neural Network in order to predict the Stock Market prices with a better accuracy</p>
 
 					      <div class="categories">MACHINE LEARNING</div>			               
 					   </div>
