--- a/undergrad.html
+++ b/undergrad.html
@@ -69,7 +69,7 @@
 
 		      <h3>Ramrao Adik Institute of Technology</h3>
 
-		      <p><a href="#"><img width="600" height="600" class="pull-left" alt="sample-image" src="images/mumb.jpg"></a>
+		      <p><a href="#"><img width="600" height="600" style = "margin: .9rem 2.4rem 2.3rem 0;" class="pull-left" alt="sample-image" src="images/mumb.jpg"></a>
 			  <br><br><br>
 			  <a class="button stroke full-width" href="https://drive.google.com/file/d/1_ofyy7RT5lthugpQj-37qq6BEimrNV4x/view?usp=sharing">Undergraduate Degree Transcripts</a>
 			  </p>
