Updated Resume Link Added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<li><a class="smoothscroll"  href="#training" title="">Training & Certifications</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>				
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="https://drive.google.com/open?id=1tbQBbRs-ZJ0hdOMBU6mS9bU7Sf4n8C3f" title="">Resume</a></li>				
+						<li><a href="https://drive.google.com/file/d/1bQqk1ogYBDp9Z7hm-qUTwjmkdNSSJQEy/view?usp=sharing" title="">Resume</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -96,7 +96,7 @@
    		</div>   		 		
    	</div> <!-- /intro-content --> 
 
-   	<ul class="intro-social">        
+   	<ul class="intro-social">
          <li><a href="https://www.facebook.com/gaurav.mahadik.73"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://www.linkedin.com/in/gaurav-mahadik-858368132/"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://github.com/gm1896"><i class="fa fa-github"></i></a></li>
@@ -162,7 +162,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Message me</a>
-   			<a href="https://drive.google.com/uc?export=download&id=1tbQBbRs-ZJ0hdOMBU6mS9bU7Sf4n8C3f" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="https://drive.google.com/uc?export=download&id=1bQqk1ogYBDp9Z7hm-qUTwjmkdNSSJQEy" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
@@ -293,7 +293,7 @@
     </section> <!-- end s-services -->
 	
 	
-	<!-- education
+	<!-- Training and Certifications
     ================================================== -->
 	
 	<section id='training' class="s-services">
