--- a/index.html
+++ b/index.html
@@ -608,52 +608,7 @@
    		</div> 
    	</div> <!-- /section-intro -->
 
-	<div class="row contact-form">
-
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
-      			<fieldset>
-
-                  <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-                  </div>
-                  <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-	               </div>
-                  <div class="form-field">
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-	               </div>                       
-                  <div class="form-field">
-	                 	<textarea name="contactMessage" id="contactMessage" placeholder="Message" rows="10" cols="50" required=""></textarea>
-	               </div>                      
-                 <div class="form-field">
-                     <button class="submitform">Submit</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>                             
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
-								</div>
-							</div>
-                  </div>
-
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning"></div>            
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-   		
-   	</div> <!-- /contact-form -->
-
+	
    	<div class="row contact-info">
 
    		<div class="col-four tab-full">
@@ -708,7 +663,7 @@
    <footer>
      	<div class="row">
 
-     		<div class="col-six tab-full pull-right social">
+     		<div class="col social">
 				<br>
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/gaurav.mahadik.73"><i class="fa fa-facebook"></i></a></li>
@@ -719,10 +674,10 @@
 	      </div>
 
       	<div class="col-eight tab-full">
-	      	<div class="copyright">
+	      	<div class="copyright" style="color: black">
 		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">Styleshout</a></span> 
-		        	<span>Distributed by <a href="https://themewagon.com/">Themewagon</a></span>	         	
+		        	<span>Design by <a style="color: black" href="http://www.styleshout.com/">Styleshout</a></span> 
+		        	<span>Distributed by <a style="color: black" href="https://themewagon.com/">Themewagon</a></span>	         	
 		         </div>		                  
 	      	</div>
 
