--- a/project2.html
+++ b/project2.html
@@ -126,7 +126,7 @@
    <footer>
      	<div class="row">
 
-     		<div class="col-six tab-full pull-right social">
+     		<div class="col social">
 				<br>
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/gaurav.mahadik.73"><i class="fa fa-facebook"></i></a></li>
@@ -137,10 +137,10 @@
 	      </div>
 
       	<div class="col-eight tab-full">
-	      	<div class="copyright">
+	      	<div class="copyright" style="color: black">
 		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">Styleshout</a></span> 
-		        	<span>Distributed by <a href="https://themewagon.com/">Themewagon</a></span>	         	
+		        	<span>Design by <a style="color: black" href="http://www.styleshout.com/">Styleshout</a></span> 
+		        	<span>Distributed by <a style="color: black" href="https://themewagon.com/">Themewagon</a></span>	         	
 		         </div>		                  
 	      	</div>
 
@@ -149,7 +149,7 @@
 		      </div>
 
       	</div> <!-- /row -->     	
-   </footer>   
+   </footer>  
 
    <div id="preloader"> 
     	<div id="loader"></div>
