--- a/project5.html
+++ b/project5.html
@@ -99,22 +99,21 @@
    <footer>
      	<div class="row">
 
-     		<div class="col-six tab-full pull-right social">
+     		<div class="col social">
 				<br>
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-				  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			      <li><a href="#"><i class="fa fa-github"></i></a></li>
+			      <li><a href="https://www.facebook.com/gaurav.mahadik.73"><i class="fa fa-facebook"></i></a></li>
+				  <li><a href="https://www.linkedin.com/in/gaurav-mahadik-858368132/"><i class="fa fa-linkedin"></i></a></li>
+				  <li><a href="https://github.com/gm1896"><i class="fa fa-github"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
 
       	<div class="col-eight tab-full">
-	      	<div class="copyright">
+	      	<div class="copyright" style="color: black">
 		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> 
-		        	<span>Distributed by <a href="https://themewagon.com/">themewagon</a></span>	         	
+		        	<span>Design by <a style="color: black" href="http://www.styleshout.com/">Styleshout</a></span> 
+		        	<span>Distributed by <a style="color: black" href="https://themewagon.com/">Themewagon</a></span>	         	
 		         </div>		                  
 	      	</div>
 
