Updated Contact Button

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Message me</a>
+   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Contact me</a>
    			<a href="https://drive.google.com/uc?export=download&id=1bQqk1ogYBDp9Z7hm-qUTwjmkdNSSJQEy" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
