--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<li><a class="smoothscroll"  href="#training" title="">Training & Certifications</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>				
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="https://drive.google.com/file/d/1bQqk1ogYBDp9Z7hm-qUTwjmkdNSSJQEy/view?usp=sharing" title="">Resume</a></li>				
+						<li><a href="https://drive.google.com/drive/u/0/folders/1MdnxUoxnZ18TMqGrQiQHuerzRm_SHvdy" title="">Resume</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -162,7 +162,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Contact me</a>
-   			<a href="https://drive.google.com/uc?export=download&id=1bQqk1ogYBDp9Z7hm-qUTwjmkdNSSJQEy" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="https://drive.google.com/uc?export=download&id=1MdnxUoxnZ18TMqGrQiQHuerzRm_SHvdy" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
