--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<li><a class="smoothscroll"  href="#training" title="">Training & Certifications</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>				
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="https://drive.google.com/drive/u/0/folders/1MdnxUoxnZ18TMqGrQiQHuerzRm_SHvdy" title="">Resume</a></li>				
+						<li><a href="https://drive.google.com/file/d/1V3PyYcqtzWwZ3jyLbYV_gXfKMB5bxPB4/view?usp=sharing" title="">Resume</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
