Revert "Refactoring code and making required changes for the same"
This reverts commit 23208a3751aacc49d7340983261a13ec70f44c53.

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="bgrid">
                 <div class="service-text">
 					<a href="https://www.uncc.edu/">
-					<img src="images/unc.jpg" alt="UNC Charlotte" style="height:400px;width:400px"></a>
+					<img src="images/unc.jpg" alt="UNC Charlotte" style="height:400px;width=400px"></a>
 					<br>
 					<br>
 					<h2>The University of North Carolina at Charlotte</h2></a>
@@ -265,14 +265,14 @@
 					Anticipated Graduation : May 2020<br>
 					</h3>
 					<br>
-					<a class="button stroke full-width" href="html/grad.html">Read More</a>
+					<a class="button stroke full-width" href="grad.html">Read More</a>
                 </div>
             </div>
 			
 			<div class="bgrid">
                 <div class="service-text">
                     <a href="http://www.rait.ac.in/">
-					<img src="images/mumb.jpg"  alt="RAIT" style="height:400px;width:400px"></a>
+					<img src="images/mumb.jpg"  alt="RAIT" style="height:400px;width=400px"></a>
 					<br>
 					<br>
 					<h2>The University of Mumbai</h2></a>
@@ -284,7 +284,7 @@
 					Graduated : July 2018<br>
 					</h3>
 					<br>
-					<a class="button stroke full-width" href="html/undergrad.html">Read More</a>
+					<a class="button stroke full-width" href="undergrad.html">Read More</a>
                 </div>
             </div>
 
@@ -478,7 +478,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="html/project1.html">SEE MORE</a>
+			            <a href="project1.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -498,7 +498,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="html/project2.html">SEE MORE</a>
+			            <a href="project2.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -518,7 +518,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="html/project3.html">SEE MORE</a>
+			            <a href="project3.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -538,7 +538,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="html/project4.html">SEE MORE</a>
+			            <a href="project4.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -558,7 +558,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="html/project5.html">SEE MORE</a>
+			            <a href="project5.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -578,7 +578,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="html/project6.html">SEE MORE</a>
+			            <a href="project6.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
