Creating html folder and minor css fix

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="bgrid">
                 <div class="service-text">
 					<a href="https://www.uncc.edu/">
-					<img src="images/unc.jpg" alt="UNC Charlotte" style="height:400px;width=400px"></a>
+					<img src="images/unc.jpg" alt="UNC Charlotte" style="height:400px;width:400px"></a>
 					<br>
 					<br>
 					<h2>The University of North Carolina at Charlotte</h2></a>
@@ -272,7 +272,7 @@
 			<div class="bgrid">
                 <div class="service-text">
                     <a href="http://www.rait.ac.in/">
-					<img src="images/mumb.jpg"  alt="RAIT" style="height:400px;width=400px"></a>
+					<img src="images/mumb.jpg"  alt="RAIT" style="height:400px;width:400px"></a>
 					<br>
 					<br>
 					<h2>The University of Mumbai</h2></a>
