Updating correct source for grad page

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 					Anticipated Graduation : May 2020<br>
 					</h3>
 					<br>
-					<a class="button stroke full-width" href="grad.html">Read More</a>
+					<a class="button stroke full-width" href="html/grad.html">Read More</a>
                 </div>
             </div>
 			
