Fixing path for image

--- a/html/grad.html
+++ b/html/grad.html
@@ -69,7 +69,7 @@
 
 		      <h3>UNC Charlotte</h3>
 
-		      <p><img width="1200" height="1200" style = "margin: .9rem 2.4rem 2.3rem 0;" class="pull-left" alt="sample-image" src="images/unc.jpg">
+		      <p><img width="1200" height="1200" style = "margin: .9rem 2.4rem 2.3rem 0;" class="pull-left" alt="sample-image" src="./images/unc.jpg">
 			  <br><br>
 			  <a class="button stroke full-width" href="https://drive.google.com/file/d/1OkPi36oevEDaGS6eC-S5glQFzjkveQYT/view?usp=sharing">Graduate Degree Transcripts</a>
 			  </p>
