--- a/html/grad.html
+++ b/html/grad.html
@@ -17,18 +17,18 @@
 
  	<!-- CSS
    ================================================== -->
-   <link rel="stylesheet" href="./css/base.css">  
-   <link rel="stylesheet" href="./css/main.css">
-   <link rel="stylesheet" href="./css/vendor.css">     
+   <link rel="stylesheet" href="../css/base.css">  
+   <link rel="stylesheet" href="../css/main.css">
+   <link rel="stylesheet" href="../css/vendor.css">     
 
    <!-- script
    ================================================== -->   
-	<script src="./js/modernizr.js"></script>
-	<script src="./js/pace.min.js"></script>
+	<script src="../js/modernizr.js"></script>
+	<script src="../js/pace.min.js"></script>
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="../favicon.png">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141247183-1"></script>
@@ -69,7 +69,7 @@
 
 		      <h3>UNC Charlotte</h3>
 
-		      <p><img width="1200" height="1200" style = "margin: .9rem 2.4rem 2.3rem 0;" class="pull-left" alt="sample-image" src="./images/unc.jpg">
+		      <p><img width="1200" height="1200" style = "margin: .9rem 2.4rem 2.3rem 0;" class="pull-left" alt="sample-image" src="../images/unc.jpg">
 			  <br><br>
 			  <a class="button stroke full-width" href="https://drive.google.com/file/d/1OkPi36oevEDaGS6eC-S5glQFzjkveQYT/view?usp=sharing">Graduate Degree Transcripts</a>
 			  </p>
@@ -140,10 +140,10 @@
 
    <!-- Java Script
    ================================================== --> 
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/plugins.js"></script>
-   <script src="js/main.js"></script>
-   <script src="js/typed.js"></script>
+   <script src="../js/jquery-2.1.3.min.js"></script>
+   <script src="../js/plugins.js"></script>
+   <script src="../js/main.js"></script>
+   <script src="../js/typed.js"></script>
 
 </body>
 
