--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 					Graduated : July 2018<br>
 					</h3>
 					<br>
-					<a class="button stroke full-width" href="undergrad.html">Read More</a>
+					<a class="button stroke full-width" href="html/undergrad.html">Read More</a>
                 </div>
             </div>
 
@@ -478,7 +478,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="project1.html">SEE MORE</a>
+			            <a href="html/project1.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -498,7 +498,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="project2.html">SEE MORE</a>
+			            <a href="html/project2.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -518,7 +518,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="project3.html">SEE MORE</a>
+			            <a href="html/project3.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -538,7 +538,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="project4.html">SEE MORE</a>
+			            <a href="html/project4.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -558,7 +558,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="project5.html">SEE MORE</a>
+			            <a href="html/project5.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
@@ -578,7 +578,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="project6.html">SEE MORE</a>
+			            <a href="html/project6.html">SEE MORE</a>
 					      <a href="#" class="popup-modal-dismiss">CLOSE</a>
 			         </div>		      
 
