--- a/html/project4.html
+++ b/html/project4.html
@@ -17,14 +17,14 @@
 
  	<!-- CSS
    ================================================== -->
-   <link rel="stylesheet" href="css/base.css">  
-   <link rel="stylesheet" href="css/main.css">
-   <link rel="stylesheet" href="css/vendor.css">     
+   <link rel="stylesheet" href="../css/base.css">  
+   <link rel="stylesheet" href="../css/main.css">
+   <link rel="stylesheet" href="../css/vendor.css">     
 
    <!-- script
    ================================================== -->   
-	<script src="js/modernizr.js"></script>
-	<script src="js/pace.min.js"></script>
+	<script src="../js/modernizr.js"></script>
+	<script src="../js/pace.min.js"></script>
 
    <!-- favicons
 	================================================== -->
@@ -71,7 +71,7 @@
 			    Completed On : SEPTEMBER 2018 - DECEMBER 2018<br>
 		      </h3>
 
-		      <p><img width="1200" height="1200" class="pull-left" alt="sample-image" src="images/SSDI.jpg">
+		      <p><img width="1200" height="1200" class="pull-left" alt="sample-image" src="../images/SSDI.jpg">
 			  
 			  <br>
 			  <br>
@@ -138,10 +138,10 @@
 
    <!-- Java Script
    ================================================== --> 
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/plugins.js"></script>
-   <script src="js/main.js"></script>
-   <script src="js/typed.js"></script>
+   <script src="../js/jquery-2.1.3.min.js"></script>
+   <script src="../js/plugins.js"></script>
+   <script src="../js/main.js"></script>
+   <script src="../js/typed.js"></script>
 
 </body>
 
