--- a/html/project5.html
+++ b/html/project5.html
@@ -17,14 +17,14 @@
 
  	<!-- CSS
    ================================================== -->
-   <link rel="stylesheet" href="css/base.css">  
-   <link rel="stylesheet" href="css/main.css">
-   <link rel="stylesheet" href="css/vendor.css">     
+   <link rel="stylesheet" href="../css/base.css">  
+   <link rel="stylesheet" href="../css/main.css">
+   <link rel="stylesheet" href="../css/vendor.css">     
 
    <!-- script
    ================================================== -->   
-	<script src="js/modernizr.js"></script>
-	<script src="js/pace.min.js"></script>
+	<script src="../js/modernizr.js"></script>
+	<script src="../js/pace.min.js"></script>
 
    <!-- favicons
 	================================================== -->
@@ -61,7 +61,7 @@
 			    Completed On : January 2019 - April 2019<br>
 		      </h3>
 
-		      <p><a href="https://drive.google.com/file/d/1XQAhmtYv-l5YACWJpGC5i62Ou9FKjvXX/view?usp=sharing"><img width="1200" height="1200" class="pull-left" alt="sample-image" src="images/project_poster.jpg"></a>
+		      <p><a href="https://drive.google.com/file/d/1XQAhmtYv-l5YACWJpGC5i62Ou9FKjvXX/view?usp=sharing"><img width="1200" height="1200" class="pull-left" alt="sample-image" src="../images/project_poster.jpg"></a>
 			  
 			  <br>
 			  <br>
@@ -130,10 +130,10 @@
 
    <!-- Java Script
    ================================================== --> 
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/plugins.js"></script>
-   <script src="js/main.js"></script>
-   <script src="js/typed.js"></script>
+   <script src="../js/jquery-2.1.3.min.js"></script>
+   <script src="../js/plugins.js"></script>
+   <script src="../js/main.js"></script>
+   <script src="../js/typed.js"></script>
 
 </body>
 
