--- a/html/undergrad.html
+++ b/html/undergrad.html
@@ -17,14 +17,14 @@
 
  	<!-- CSS
    ================================================== -->
-   <link rel="stylesheet" href="css/base.css">  
-   <link rel="stylesheet" href="css/main.css">
-   <link rel="stylesheet" href="css/vendor.css">     
+   <link rel="stylesheet" href="../css/base.css">  
+   <link rel="stylesheet" href="../css/main.css">
+   <link rel="stylesheet" href="../css/vendor.css">     
 
    <!-- script
    ================================================== -->   
-	<script src="js/modernizr.js"></script>
-	<script src="js/pace.min.js"></script>
+	<script src="../js/modernizr.js"></script>
+	<script src="../js/pace.min.js"></script>
 
    <!-- favicons
 	================================================== -->
@@ -69,7 +69,7 @@
 
 		      <h3>Ramrao Adik Institute of Technology</h3>
 
-		      <p><a href="#"><img width="600" height="600" style = "margin: .9rem 2.4rem 2.3rem 0;" class="pull-left" alt="sample-image" src="images/mumb.jpg"></a>
+		      <p><a href="#"><img width="600" height="600" style = "margin: .9rem 2.4rem 2.3rem 0;" class="pull-left" alt="sample-image" src="../images/mumb.jpg"></a>
 			  <br><br><br>
 			  <a class="button stroke full-width" href="https://drive.google.com/file/d/1_ofyy7RT5lthugpQj-37qq6BEimrNV4x/view?usp=sharing">Undergraduate Degree Transcripts</a>
 			  </p>
@@ -147,10 +147,10 @@
 
    <!-- Java Script
    ================================================== --> 
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/plugins.js"></script>
-   <script src="js/main.js"></script>
-   <script src="js/typed.js"></script>
+   <script src="../js/jquery-2.1.3.min.js"></script>
+   <script src="../js/plugins.js"></script>
+   <script src="../js/main.js"></script>
+   <script src="../js/typed.js"></script>
 
 </body>
 
